branches/muParserSSE/parser/muParserSSE.h


/** \file 
    \brief This file contains the DLL interface of muparser.
*/

// Basic types
typedef void*  mecParserHandle_t;    // parser handle
typedef char   mecChar_t;            // character type
typedef int    mecBool_t;            // boolean type
typedef int    mecInt_t;             // integer type 
 
typedef mecFloat_t (*mecFun1_t)(mecFloat_t);

API_EXPORT(float) mecEval(mecParserHandle_t a_hParser);


API_EXPORT(void) mecDefinePostfixOprt( mecParserHandle_t a_hParser, 
                                       const mecChar_t* a_szName, 
                                       mecFun1_t a_pOprt, 
                                       mecBool_t a_bOptimize);



API_EXPORT(void) mecDefineInfixOprt( mecParserHandle_t a_hParser, 
                                     const mecChar_t* a_szName, 
                                     mecFun1_t a_pOprt, 
                                     mecBool_t a_bOptimize);

API_EXPORT(void) mecSetArgSep(mecParserHandle_t a_hParser, const mecChar_t cArgSep);

API_EXPORT(void) mecSetDecSep(mecParserHandle_t a_hParser, const mecChar_t cArgSep);

API_EXPORT(void) mecSetThousandsSep(mecParserHandle_t a_hParser, const mecChar_t cArgSep);


// Error handling
API_EXPORT(mecBool_t) mecError(mecParserHandle_t a_hParser);

API_EXPORT(void) mecErrorReset(mecParserHandle_t a_hParser);

API_EXPORT(const mecChar_t*) mecGetErrorMsg(mecParserHandle_t a_hParser);

API_EXPORT(mecInt_t) mecGetErrorCode(mecParserHandle_t a_hParser);

API_EXPORT(mecInt_t) mecGetErrorPos(mecParserHandle_t a_hParser);

API_EXPORT(const mecChar_t*) mecGetErrorToken(mecParserHandle_t a_hParser);