branches/muParserSSE/example_csharp/muParser.cs


      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefinePostfixOprt(IntPtr a_pParser, 
                                                        string id, 
                                                        Fun1Delegate fun, 
                                                        int optimize );

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecDefineInfixOprt(IntPtr a_pParser, 
                                                      string id, 
                                                      Fun1Delegate fun,
                                                      int optimize);
      
      //----------------------------------------------------------
      // 
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern float mecEval(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern int mecError(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecErrorReset(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern int mecGetErrorCode(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern int mecGetErrorPos(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)] //[return : MarshalAs(UnmanagedType.LPStr)]
      protected static extern string mecGetErrorMsg(IntPtr a_pParser);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern string mecGetErrorToken(IntPtr a_pParser);
        
      //----------------------------------------------------------
      // Localization
      //----------------------------------------------------------

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecSetArgSep(IntPtr a_pParser, byte cArgSep);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecSetDecSep(IntPtr a_pParser, byte cArgSep);

      [DllImport("muparserSSE.dll", CallingConvention = CallingConvention.Cdecl)]
      protected static extern void mecSetThousandsSep(IntPtr a_pParser, byte cArgSep);
        
      #endregion
    }
}
